--- a/firmware/TaxelProject_CubeIDE/TaxelProject.ioc
+++ b/firmware/TaxelProject_CubeIDE/TaxelProject.ioc
@@ -3,11 +3,12 @@ ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_9
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_13
-ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV8
 ADC1.ContinuousConvMode=ENABLE
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ClockPrescaler,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversion
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ClockPrescaler,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversion,ExternalTrigConv
 ADC1.NbrOfConversion=4
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
@@ -36,7 +37,18 @@ Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_HIGH
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=ADC1
-Dma.RequestsNb=1
+Dma.Request1=USART1_TX
+Dma.RequestsNb=2
+Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.1.Instance=DMA2_Stream7
+Dma.USART1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.1.Mode=DMA_NORMAL
+Dma.USART1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -48,8 +60,10 @@ Mcu.IP2=DMA
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IP6=TIM6
-Mcu.IPNb=7
+Mcu.IP6=TIM2
+Mcu.IP7=TIM6
+Mcu.IP8=USART1
+Mcu.IPNb=9
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -62,35 +76,39 @@ Mcu.Pin14=PE8
 Mcu.Pin15=PE10
 Mcu.Pin16=PE12
 Mcu.Pin17=PE13
-Mcu.Pin18=PD11
-Mcu.Pin19=PD12
+Mcu.Pin18=PB14
+Mcu.Pin19=PB15
 Mcu.Pin2=PH0/OSC_IN
-Mcu.Pin20=PD13
-Mcu.Pin21=PG2
-Mcu.Pin22=PG3
-Mcu.Pin23=PA13
-Mcu.Pin24=PA14
-Mcu.Pin25=PG9
-Mcu.Pin26=PG14
-Mcu.Pin27=PB6
-Mcu.Pin28=VP_SYS_VS_Systick
-Mcu.Pin29=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin20=PD11
+Mcu.Pin21=PD12
+Mcu.Pin22=PD13
+Mcu.Pin23=PG2
+Mcu.Pin24=PG3
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PG9
+Mcu.Pin28=PG14
+Mcu.Pin29=PB6
 Mcu.Pin3=PH1/OSC_OUT
+Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin31=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin4=PC0
 Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA3
 Mcu.Pin8=PA7
 Mcu.Pin9=PB1
-Mcu.PinsNb=30
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
-MxCube.Version=6.13.0
-MxDb.Version=DB.6.0.130
-NVIC.ADC_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true
+MxCube.Version=6.14.1
+MxDb.Version=DB.6.0.141
+NVIC.ADC_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -100,6 +118,9 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
@@ -114,6 +135,10 @@ PA7.Locked=true
 PA7.PinState=GPIO_PIN_SET
 PA7.Signal=GPIO_Output
 PB1.Signal=ADCx_IN9
+PB14.Mode=Asynchronous
+PB14.Signal=USART1_TX
+PB15.Mode=Asynchronous
+PB15.Signal=USART1_RX
 PB2.GPIOParameters=GPIO_Speed,GPIO_PuPd
 PB2.GPIO_PuPd=GPIO_PULLDOWN
 PB2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -224,6 +249,7 @@ PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
@@ -231,7 +257,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F767ZITx
-ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.17.2
+ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.17.3
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -252,7 +278,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=25000000
 RCC.APB1Freq_Value=25000000
 RCC.APB1TimFreq_Value=25000000
@@ -316,11 +342,16 @@ SH.ADCx_IN3.0=ADC1_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
-TIM6.IPParameters=Prescaler,Period
-TIM6.Period=999
-TIM6.Prescaler=24
+TIM6.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
+TIM6.Period=124
+TIM6.Prescaler=49
+TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
